PowerForensics/src/Cmdlets/BinShred/BinShredParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\BinShred.g4 by ANTLR 4.5.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.1")]
[System.CLSCompliant(false)]
public partial class BinShredParser : Parser {
	public const int
		QUOTEDVALUE=1, NATIVEEXPRESSION=2, COMMA=3, QUOTE=4, COLON=5, SEMI=6, 
		LPAREN=7, RPAREN=8, BYTES=9, ITEMS=10, AS=11, DESCRIBED=12, BY=13, ASCII=14, 
		UNICODE=15, UTF8=16, UINT64=17, UINT32=18, UINT16=19, INT64=20, INT32=21, 
		INT16=22, SINGLE=23, FLOAT=24, DOUBLE=25, ADDITIONAL=26, PROPERTIES=27, 
		IDENTIFIED=28, FROM=29, PADDING=30, TO=31, MULTIPLE=32, OF=33, WS=34, 
		DOC_COMMENT=35, BLOCK_COMMENT=36, LINE_COMMENT=37, INT=38, HEXADECIMAL=39, 
		LABEL=40;
	public const int
		RULE_template = 0, RULE_templateEntry = 1, RULE_parseRule = 2, RULE_ruleBody = 3, 
		RULE_propertyName = 4, RULE_lookupTableName = 5, RULE_ruleOptions = 6, 
		RULE_byteOption = 7, RULE_sizeReference = 8, RULE_byteFormat = 9, RULE_lookupTable = 10, 
		RULE_lookupTableEntry = 11, RULE_lookupTableEntryKey = 12, RULE_label = 13;
	public static readonly string[] ruleNames = {
		"template", "templateEntry", "parseRule", "ruleBody", "propertyName", 
		"lookupTableName", "ruleOptions", "byteOption", "sizeReference", "byteFormat", 
		"lookupTable", "lookupTableEntry", "lookupTableEntryKey", "label"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "','", "'\"'", "':'", "';'", "'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "QUOTEDVALUE", "NATIVEEXPRESSION", "COMMA", "QUOTE", "COLON", "SEMI", 
		"LPAREN", "RPAREN", "BYTES", "ITEMS", "AS", "DESCRIBED", "BY", "ASCII", 
		"UNICODE", "UTF8", "UINT64", "UINT32", "UINT16", "INT64", "INT32", "INT16", 
		"SINGLE", "FLOAT", "DOUBLE", "ADDITIONAL", "PROPERTIES", "IDENTIFIED", 
		"FROM", "PADDING", "TO", "MULTIPLE", "OF", "WS", "DOC_COMMENT", "BLOCK_COMMENT", 
		"LINE_COMMENT", "INT", "HEXADECIMAL", "LABEL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "BinShred.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public BinShredParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class TemplateContext : ParserRuleContext {
		public TemplateEntryContext[] templateEntry() {
			return GetRuleContexts<TemplateEntryContext>();
		}
		public TemplateEntryContext templateEntry(int i) {
			return GetRuleContext<TemplateEntryContext>(i);
		}
		public ITerminalNode Eof() { return GetToken(BinShredParser.Eof, 0); }
		public TemplateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_template; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.EnterTemplate(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.ExitTemplate(this);
		}
	}

	[RuleVersion(0)]
	public TemplateContext template() {
		TemplateContext _localctx = new TemplateContext(Context, State);
		EnterRule(_localctx, 0, RULE_template);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 28; templateEntry();
			State = 32;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BYTES) | (1L << ITEMS) | (1L << AS) | (1L << DESCRIBED) | (1L << BY) | (1L << ASCII) | (1L << UNICODE) | (1L << UTF8) | (1L << UINT64) | (1L << UINT32) | (1L << UINT16) | (1L << INT64) | (1L << INT32) | (1L << INT16) | (1L << SINGLE) | (1L << FLOAT) | (1L << DOUBLE) | (1L << ADDITIONAL) | (1L << PROPERTIES) | (1L << IDENTIFIED) | (1L << FROM) | (1L << PADDING) | (1L << TO) | (1L << MULTIPLE) | (1L << OF) | (1L << LABEL))) != 0)) {
				{
				{
				State = 29; templateEntry();
				}
				}
				State = 34;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 35; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TemplateEntryContext : ParserRuleContext {
		public ParseRuleContext parseRule() {
			return GetRuleContext<ParseRuleContext>(0);
		}
		public LookupTableContext lookupTable() {
			return GetRuleContext<LookupTableContext>(0);
		}
		public TemplateEntryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_templateEntry; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.EnterTemplateEntry(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.ExitTemplateEntry(this);
		}
	}

	[RuleVersion(0)]
	public TemplateEntryContext templateEntry() {
		TemplateEntryContext _localctx = new TemplateEntryContext(Context, State);
		EnterRule(_localctx, 2, RULE_templateEntry);
		try {
			State = 39;
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 37; parseRule();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 38; lookupTable();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParseRuleContext : ParserRuleContext {
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public ITerminalNode COLON() { return GetToken(BinShredParser.COLON, 0); }
		public RuleBodyContext[] ruleBody() {
			return GetRuleContexts<RuleBodyContext>();
		}
		public RuleBodyContext ruleBody(int i) {
			return GetRuleContext<RuleBodyContext>(i);
		}
		public ITerminalNode SEMI() { return GetToken(BinShredParser.SEMI, 0); }
		public ParseRuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parseRule; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.EnterParseRule(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.ExitParseRule(this);
		}
	}

	[RuleVersion(0)]
	public ParseRuleContext parseRule() {
		ParseRuleContext _localctx = new ParseRuleContext(Context, State);
		EnterRule(_localctx, 4, RULE_parseRule);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 41; label();
			State = 42; Match(COLON);
			State = 43; ruleBody();
			State = 47;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << BYTES) | (1L << ITEMS) | (1L << AS) | (1L << DESCRIBED) | (1L << BY) | (1L << ASCII) | (1L << UNICODE) | (1L << UTF8) | (1L << UINT64) | (1L << UINT32) | (1L << UINT16) | (1L << INT64) | (1L << INT32) | (1L << INT16) | (1L << SINGLE) | (1L << FLOAT) | (1L << DOUBLE) | (1L << ADDITIONAL) | (1L << PROPERTIES) | (1L << IDENTIFIED) | (1L << FROM) | (1L << PADDING) | (1L << TO) | (1L << MULTIPLE) | (1L << OF) | (1L << DOC_COMMENT) | (1L << LABEL))) != 0)) {
				{
				{
				State = 44; ruleBody();
				}
				}
				State = 49;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 50; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RuleBodyContext : ParserRuleContext {
		public ITerminalNode DOC_COMMENT() { return GetToken(BinShredParser.DOC_COMMENT, 0); }
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public ITerminalNode LPAREN() { return GetToken(BinShredParser.LPAREN, 0); }
		public SizeReferenceContext sizeReference() {
			return GetRuleContext<SizeReferenceContext>(0);
		}
		public ITerminalNode ITEMS() { return GetToken(BinShredParser.ITEMS, 0); }
		public ITerminalNode RPAREN() { return GetToken(BinShredParser.RPAREN, 0); }
		public RuleOptionsContext ruleOptions() {
			return GetRuleContext<RuleOptionsContext>(0);
		}
		public ITerminalNode ADDITIONAL() { return GetToken(BinShredParser.ADDITIONAL, 0); }
		public ITerminalNode PROPERTIES() { return GetToken(BinShredParser.PROPERTIES, 0); }
		public ITerminalNode IDENTIFIED() { return GetToken(BinShredParser.IDENTIFIED, 0); }
		public ITerminalNode BY() { return GetToken(BinShredParser.BY, 0); }
		public PropertyNameContext propertyName() {
			return GetRuleContext<PropertyNameContext>(0);
		}
		public ITerminalNode FROM() { return GetToken(BinShredParser.FROM, 0); }
		public LookupTableNameContext lookupTableName() {
			return GetRuleContext<LookupTableNameContext>(0);
		}
		public ITerminalNode PADDING() { return GetToken(BinShredParser.PADDING, 0); }
		public ITerminalNode TO() { return GetToken(BinShredParser.TO, 0); }
		public ITerminalNode MULTIPLE() { return GetToken(BinShredParser.MULTIPLE, 0); }
		public ITerminalNode OF() { return GetToken(BinShredParser.OF, 0); }
		public ITerminalNode BYTES() { return GetToken(BinShredParser.BYTES, 0); }
		public RuleBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ruleBody; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.EnterRuleBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.ExitRuleBody(this);
		}
	}

	[RuleVersion(0)]
	public RuleBodyContext ruleBody() {
		RuleBodyContext _localctx = new RuleBodyContext(Context, State);
		EnterRule(_localctx, 6, RULE_ruleBody);
		int _la;
		try {
			State = 89;
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 53;
				_la = TokenStream.La(1);
				if (_la==DOC_COMMENT) {
					{
					State = 52; Match(DOC_COMMENT);
					}
				}

				State = 68;
				switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
				case 1:
					{
					{
					State = 55; label();
					State = 56; Match(LPAREN);
					State = 57; sizeReference();
					State = 58; Match(ITEMS);
					State = 59; Match(RPAREN);
					}
					}
					break;
				case 2:
					{
					{
					State = 61; label();
					State = 66;
					switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
					case 1:
						{
						State = 62; Match(LPAREN);
						State = 63; ruleOptions();
						State = 64; Match(RPAREN);
						}
						break;
					}
					}
					}
					break;
				}
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 70; Match(LPAREN);
				State = 71; Match(ADDITIONAL);
				State = 72; Match(PROPERTIES);
				State = 73; Match(IDENTIFIED);
				State = 74; Match(BY);
				State = 75; propertyName();
				State = 76; Match(FROM);
				State = 77; lookupTableName();
				State = 78; Match(RPAREN);
				}
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				{
				State = 80; Match(LPAREN);
				State = 81; Match(PADDING);
				State = 82; Match(TO);
				State = 83; Match(MULTIPLE);
				State = 84; Match(OF);
				State = 85; sizeReference();
				State = 86; Match(BYTES);
				State = 87; Match(RPAREN);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertyNameContext : ParserRuleContext {
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public PropertyNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertyName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.EnterPropertyName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.ExitPropertyName(this);
		}
	}

	[RuleVersion(0)]
	public PropertyNameContext propertyName() {
		PropertyNameContext _localctx = new PropertyNameContext(Context, State);
		EnterRule(_localctx, 8, RULE_propertyName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91; label();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LookupTableNameContext : ParserRuleContext {
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public LookupTableNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lookupTableName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.EnterLookupTableName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.ExitLookupTableName(this);
		}
	}

	[RuleVersion(0)]
	public LookupTableNameContext lookupTableName() {
		LookupTableNameContext _localctx = new LookupTableNameContext(Context, State);
		EnterRule(_localctx, 10, RULE_lookupTableName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93; label();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RuleOptionsContext : ParserRuleContext {
		public ByteOptionContext byteOption() {
			return GetRuleContext<ByteOptionContext>(0);
		}
		public RuleOptionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ruleOptions; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.EnterRuleOptions(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.ExitRuleOptions(this);
		}
	}

	[RuleVersion(0)]
	public RuleOptionsContext ruleOptions() {
		RuleOptionsContext _localctx = new RuleOptionsContext(Context, State);
		EnterRule(_localctx, 12, RULE_ruleOptions);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95; byteOption();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ByteOptionContext : ParserRuleContext {
		public SizeReferenceContext sizeReference() {
			return GetRuleContext<SizeReferenceContext>(0);
		}
		public ITerminalNode BYTES() { return GetToken(BinShredParser.BYTES, 0); }
		public ITerminalNode AS() { return GetToken(BinShredParser.AS, 0); }
		public ByteFormatContext byteFormat() {
			return GetRuleContext<ByteFormatContext>(0);
		}
		public ITerminalNode DESCRIBED() { return GetToken(BinShredParser.DESCRIBED, 0); }
		public ITerminalNode BY() { return GetToken(BinShredParser.BY, 0); }
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public ByteOptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_byteOption; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.EnterByteOption(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.ExitByteOption(this);
		}
	}

	[RuleVersion(0)]
	public ByteOptionContext byteOption() {
		ByteOptionContext _localctx = new ByteOptionContext(Context, State);
		EnterRule(_localctx, 14, RULE_byteOption);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; sizeReference();
			State = 98; Match(BYTES);
			State = 106;
			_la = TokenStream.La(1);
			if (_la==AS) {
				{
				State = 99; Match(AS);
				State = 100; byteFormat();
				State = 104;
				_la = TokenStream.La(1);
				if (_la==DESCRIBED) {
					{
					State = 101; Match(DESCRIBED);
					State = 102; Match(BY);
					State = 103; label();
					}
				}

				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SizeReferenceContext : ParserRuleContext {
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public ITerminalNode INT() { return GetToken(BinShredParser.INT, 0); }
		public ITerminalNode HEXADECIMAL() { return GetToken(BinShredParser.HEXADECIMAL, 0); }
		public ITerminalNode NATIVEEXPRESSION() { return GetToken(BinShredParser.NATIVEEXPRESSION, 0); }
		public SizeReferenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sizeReference; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.EnterSizeReference(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.ExitSizeReference(this);
		}
	}

	[RuleVersion(0)]
	public SizeReferenceContext sizeReference() {
		SizeReferenceContext _localctx = new SizeReferenceContext(Context, State);
		EnterRule(_localctx, 16, RULE_sizeReference);
		try {
			State = 112;
			switch (TokenStream.La(1)) {
			case BYTES:
			case ITEMS:
			case AS:
			case DESCRIBED:
			case BY:
			case ASCII:
			case UNICODE:
			case UTF8:
			case UINT64:
			case UINT32:
			case UINT16:
			case INT64:
			case INT32:
			case INT16:
			case SINGLE:
			case FLOAT:
			case DOUBLE:
			case ADDITIONAL:
			case PROPERTIES:
			case IDENTIFIED:
			case FROM:
			case PADDING:
			case TO:
			case MULTIPLE:
			case OF:
			case LABEL:
				EnterOuterAlt(_localctx, 1);
				{
				State = 108; label();
				}
				break;
			case INT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 109; Match(INT);
				}
				break;
			case HEXADECIMAL:
				EnterOuterAlt(_localctx, 3);
				{
				State = 110; Match(HEXADECIMAL);
				}
				break;
			case NATIVEEXPRESSION:
				EnterOuterAlt(_localctx, 4);
				{
				State = 111; Match(NATIVEEXPRESSION);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ByteFormatContext : ParserRuleContext {
		public ITerminalNode ASCII() { return GetToken(BinShredParser.ASCII, 0); }
		public ITerminalNode UNICODE() { return GetToken(BinShredParser.UNICODE, 0); }
		public ITerminalNode UTF8() { return GetToken(BinShredParser.UTF8, 0); }
		public ITerminalNode UINT64() { return GetToken(BinShredParser.UINT64, 0); }
		public ITerminalNode UINT32() { return GetToken(BinShredParser.UINT32, 0); }
		public ITerminalNode UINT16() { return GetToken(BinShredParser.UINT16, 0); }
		public ITerminalNode INT64() { return GetToken(BinShredParser.INT64, 0); }
		public ITerminalNode INT32() { return GetToken(BinShredParser.INT32, 0); }
		public ITerminalNode INT16() { return GetToken(BinShredParser.INT16, 0); }
		public ITerminalNode SINGLE() { return GetToken(BinShredParser.SINGLE, 0); }
		public ITerminalNode FLOAT() { return GetToken(BinShredParser.FLOAT, 0); }
		public ITerminalNode DOUBLE() { return GetToken(BinShredParser.DOUBLE, 0); }
		public ITerminalNode NATIVEEXPRESSION() { return GetToken(BinShredParser.NATIVEEXPRESSION, 0); }
		public ByteFormatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_byteFormat; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.EnterByteFormat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.ExitByteFormat(this);
		}
	}

	[RuleVersion(0)]
	public ByteFormatContext byteFormat() {
		ByteFormatContext _localctx = new ByteFormatContext(Context, State);
		EnterRule(_localctx, 18, RULE_byteFormat);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			_la = TokenStream.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NATIVEEXPRESSION) | (1L << ASCII) | (1L << UNICODE) | (1L << UTF8) | (1L << UINT64) | (1L << UINT32) | (1L << UINT16) | (1L << INT64) | (1L << INT32) | (1L << INT16) | (1L << SINGLE) | (1L << FLOAT) | (1L << DOUBLE))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LookupTableContext : ParserRuleContext {
		public LookupTableNameContext lookupTableName() {
			return GetRuleContext<LookupTableNameContext>(0);
		}
		public ITerminalNode COLON() { return GetToken(BinShredParser.COLON, 0); }
		public LookupTableEntryContext[] lookupTableEntry() {
			return GetRuleContexts<LookupTableEntryContext>();
		}
		public LookupTableEntryContext lookupTableEntry(int i) {
			return GetRuleContext<LookupTableEntryContext>(i);
		}
		public ITerminalNode SEMI() { return GetToken(BinShredParser.SEMI, 0); }
		public LookupTableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lookupTable; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.EnterLookupTable(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBinShredListener typedListener = listener as IBinShredListener;
			if (typedListener != null) typedListener.ExitLookupTable(this);
		}
	}
